Fix span alignment

--- a/src/style.css
+++ b/src/style.css
@@ -214,7 +214,7 @@ input[type="checkbox"][switch]:checked:after {
     content: var(--assetToggleSwitchOnIcon);
 }
 
-label span {
+label > span {
     position: relative;
     top: -8px;
 }
